# structured-outputs

./: README.md  instructor_retry_based.py  just_prompting.py  logit_based.py  logits.md  main.py  pydantic_base_model.py  pyproject.toml
