[project]
name = "structured-outputs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "anthropic>=0.105.2",
    "groq>=1.4.0",
    "instructor>=1.15.1",
    "openai>=2.38.0",
    "outlines>=1.3.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "torch>=2.12.0",
    "transformers>=5.9.0",
]
